@@ -1,5 +1,5 @@
 .panel#summary
-  %span{:style => "float:right"}= gravatar_for(@lead, :size => "50x50", :default => "#{request.protocol + request.host_with_port}/images/avatar.jpg")
+  %span{:style => "float:right"}= gravatar_for(@lead, :size => "50x50")
   %h4= @lead.full_name
   - if !@lead.title.blank? && !@lead.company.blank?
     %div== #{@lead.title} at #{@lead.company}
