@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Sat, Oct 24, 2009
 ---------------------------------------------------------------------
 - Allow renaming both main and admin tabs (see config/settings.yml).
+- Refactored gravatars to always show default image if gravatar is missing.
 
 Thu, Oct 22, 2009
 ---------------------------------------------------------------------
